# superbot_ws

./: .gitmodules  README.md
src/superbot_core/: CMakeLists.txt  package.xml  setup.py  superbot_hardware.xml
src/superbot_core/config/: joystick.yaml  main.rviz  mapper_params_slam.yaml  nav2_params.yaml  navigate_w_replanning_and_recovery.xml  realrobot.yaml  superbot_controllers.yaml  twist_mux.yaml
src/superbot_core/dataout/: coba_1.csv  data_rpm.py  data_superbot.py  datafix.py  datagrafik1.py  datagrafik2.py
src/superbot_core/dataout/csv/: celah_3.csv  celah_6p1.csv  celah_p2.csv  coba1.csv  coba2.csv  coba3.csv  coba4.csv  coba5.csv  coba_3.csv  coba_4.csv  coba_5.csv  coba_6.csv  hd2_p1.csv  hd2_p2.csv  hd2_p3.csv  maju.csv  maju_.csv  merged_log_20250717_182545.csv  merged_log_20250730_214817.csv  merged_log_20250730_214848.csv  merged_log_20250730_215329.csv  merged_log_20250730_215540.csv  merged_log_20250730_215717.csv  merged_log_20250730_215900.csv  merged_log_20250801_182533.csv  merged_log_20250801_183201.csv  merged_log_20250801_191527.csv  merged_log_20250801_192224.csv  merged_log_20250801_192436.csv  merged_log_20250801_193411.csv  merged_log_20250801_194144.csv  merged_log_20250801_194759.csv  merged_log_20250801_195105.csv  merged_log_20250801_202407.csv  mundur.csv
src/superbot_core/dataout/csv/odom/: excel.ods
src/superbot_core/dataout/csv/odom/1000/: odom_1.csv  odom_10.csv  odom_11.csv  odom_12.csv  odom_13.csv  odom_14.csv  odom_15.csv  odom_2.csv  odom_3.csv  odom_4.csv  odom_5.csv  odom_6.csv  odom_7.csv  odom_8.csv  odom_9.csv
src/superbot_core/dataout/csv/odom/200/: odom_1.csv  odom_10.csv  odom_11.csv  odom_12.csv  odom_13.csv  odom_14.csv  odom_15.csv  odom_2.csv  odom_3.csv  odom_4.csv  odom_5.csv  odom_6.csv  odom_7.csv  odom_8.csv  odom_9.csv
src/superbot_core/dataout/csv/odom/300/: odom_1.csv  odom_10.csv  odom_11.csv  odom_12.csv  odom_13.csv  odom_14.csv  odom_15.csv  odom_2.csv  odom_3.csv  odom_4.csv  odom_5.csv  odom_6.csv  odom_7.csv  odom_8.csv  odom_9.csv
src/superbot_core/dataout/csv/odom/400/: odom_1.csv  odom_10.csv  odom_11.csv  odom_12.csv  (+11 more)
src/superbot_core/dataout/csv/scan/: .~lock.excel.ods#  excel.ods
src/superbot_core/description/: camera.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
src/superbot_core/hardware/: superbot_system.cpp
src/superbot_core/hardware/include/superbot_hardware/: superbot_system.hpp  visibility_control.h  wheel.hpp
src/superbot_core/launch/: joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  launch_super.launch.py  launch_super_follow.launch.py  load_cell.py  localization_launch.py  navigation_launch.py  navnloc.py  rplidar.launch.py  rsp.launch.py  slam.py  superbotgui.py
src/superbot_core/maps/: coba1.data  my_map2_save.pgm  my_map2_save.yaml  my_map2_serial.data  my_map_save.pgm  my_map_save.yaml  my_map_serial.data  p1_save.pgm  p1_save.yaml  p2_save.pgm  p2_save.yaml  p3_save.pgm  p3_save.yaml  p4_save.pgm  p4_save.yaml  p5_save.pgm  p5_save.yaml  p5_serial.data  p6_save.pgm  p6_save.yaml  p6_serial.data
src/superbot_core/ros2_control/: superbot.ros2_control.xacro
src/superbot_core/scripts/: superggui_yolo.py
src/superbot_core/txt/: cgatparamsteb.yaml  ekf.yaml.txtt.txt  goal_monitor.py  goal_sender.py  goalpose.txt  gui.py.txt  launch_robot_hw.launch.py.txt  main2.rviz.txt  nav2_params copy.yaml  nav2_params copy.yaml.txt  nav2_params.yaml.txt  nav2_params.yaml.txt.txt  nav2_params2.yaml  robot_core copy.xacro.txt  superbot_gui.py  superbot_gui.py.txt  superbotgui.py  superggui copy.py  supergguisalah.py  supergui.py.txt  supergui_final.py
src/superbot_hardware/: CMakeLists.txt  package.xml
src/superbot_hardware/config/: superbot_controllers.yaml
src/superbot_hardware/hardware/: rpm_node.py  superbot_system.cpp
src/superbot_hardware/hardware/include/superbot_hardware/: esp32_comms.hpp
src/superbot_hardware/launch/: superbot.launch.py  view_robot.launch.py
src/superbot_hardware/ros2_control/: superbot.ros2_control.xacro
src/superbot_hardware/rviz/: superbot.rviz
src/superbot_hardware/urdf/: superbot.urdf.xacro  superbot_description.urdf.xacro
(+178 files in other folders)
